Signup and Login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ springdoc.swagger-ui.operationsSorter=method
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+# App Properties
+learn.ala.app.jwtSecret= bezKoderSecretKey
+learn.ala.app.jwtExpirationMs= 86400000
