make welcome update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://localhost:5432/NewAla
+spring.datasource.url = jdbc:postgresql://34.67.52.189:5006/ala
 spring.datasource.username = postgres
-spring.datasource.password = ala
-
+spring.datasource.password = postgres
+server.port = 5007
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
