--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,21 @@
 				<artifactId>gson</artifactId>
 				<version>2.8.5</version>
 			</dependency>
+			
+			<dependency>
+	            <groupId>edu.stanford.nlp</groupId>
+	            <artifactId>stanford-corenlp</artifactId>
+	            <version>3.9.2</version>
+	        </dependency>
+
+	        <dependency>
+	            <groupId>edu.stanford.nlp</groupId>
+	            <artifactId>stanford-corenlp</artifactId>
+	            <version>3.9.2</version>
+	            <classifier>models</classifier>
+	        </dependency>
+			
+			
 			<dependency>
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-ui</artifactId>
@@ -47,7 +62,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
+			
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
