commit to have security and initials of bot implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://34.67.52.189:5006/ala
+
+##Production :
+
+#spring.datasource.url = jdbc:postgresql://34.67.52.189:5006/ala
+#spring.datasource.username = postgres
+#spring.datasource.password = postgres
+#server.port = 5007
+
+
+##Developemnt :
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/NewAla
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = ala
 server.port = 5007
+
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
