--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
 
 	<dependencies>
 			<dependency>
+					<artifactId>com.google</artifactId>
+					<groupId>Ab</groupId>
+					<version>0.0.4.3</version>
+					<scope>system</scope>
+					<systemPath>${project.basedir}/lib/ab.jar</systemPath>
+		 			 <type>jar</type>
+		 			 <optional>true</optional>
+					
+				</dependency>
+	
+			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>2.8.5</version>
