--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 
 ##Production :
 
-#spring.datasource.url = jdbc:postgresql://34.67.52.189:5006/ala
+#spring.datasource.url = jdbc:postgresql://35.202.68.61:5000/ALA
 #spring.datasource.username = postgres
-#spring.datasource.password = postgres
-#server.port = 5007
+#spring.datasource.password = root
+#server.port = 5010
 
 
 ##Developemnt :
